y.output
Rules useless in parser due to conflicts

   25 $@1: /* vacío */


Estado 98 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: inicio_prima $end

    1 inicio_prima: inicio

    2 inicio: DECVAR bloque_declaraciones ENDDEC programa
    3       | programa

    4 bloque_declaraciones: declaraciones
    5                     | bloque_declaraciones declaraciones

    6 declaraciones: lista_de_variables DECLARACION tipodato P_COMA

    7 lista_de_variables: ID
    8                   | lista_de_variables COMA ID

    9 tipodato: STRING
   10         | CHAR
   11         | INTEGER
   12         | FLOAT

   13 programa: bloque

   14 bloque: sentencia
   15       | bloque sentencia

   16 sentencia: ciclo
   17          | ciclo_especial
   18          | asignacion
   19          | seleccion
   20          | funcion

   21 funcion: ESCRIBIR factor_mod P_COMA
   22        | ESCRIBIR CTE_CADENA P_COMA
   23        | ESCANEAR ID P_COMA

   24 seleccion: IF P_A condicion_mul P_C START bloque END

   25 $@1: /* vacío */

   26 seleccion: IF P_A condicion_mul P_C START bloque $@1 END ELSE START bloque END

   27 $@2: /* vacío */

   28 condicion_mul: condicion $@2 AND condicion

   29 $@3: /* vacío */

   30 condicion_mul: condicion $@3 OR condicion
   31              | NOT condicion
   32              | condicion

   33 $@4: /* vacío */

   34 condicion: expresion $@4 MAYOR expresion

   35 $@5: /* vacío */

   36 condicion: expresion $@5 MENOR expresion

   37 $@6: /* vacío */

   38 condicion: expresion $@6 MAYOR_IGUAL expresion

   39 $@7: /* vacío */

   40 condicion: expresion $@7 MENOR_IGUAL expresion

   41 $@8: /* vacío */

   42 condicion: expresion $@8 IGUAL expresion

   43 $@9: /* vacío */

   44 condicion: expresion $@9 DISTINTO expresion

   45 asignacion: ID ASIG expresion P_COMA
   46           | ID ASIG CTE_CADENA P_COMA

   47 expresion: expresion OP_SUMA termino
   48          | expresion OP_RESTA termino
   49          | termino

   50 termino: termino OP_MULT factor
   51        | termino OP_DIV factor
   52        | factor

   53 factor: factor OP_MOD factor_mod
   54       | factor_mod

   55 factor_mod: ID
   56           | CTE_INT
   57           | CTE_REAL
   58           | P_A expresion P_C

   59 ciclo: WHILE P_A condicion_mul P_C START bloque END

   60 ciclo_especial: WHILE ID IN C_A lista_de_expresiones C_C DO bloque ENDWHILE

   61 lista_de_expresiones: expresion
   62                     | lista_de_expresiones COMA expresion


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
CTE_INT (258) 56
CTE_REAL (259) 57
CTE_CADENA (260) 22 46
P_COMA (261) 6 21 22 23 45 46
DECLARACION (262) 6
COMA (263) 8 62
C_A (264) 60
C_C (265) 60
AND (266) 28
OR (267) 30
NOT (268) 31
IGUAL (269) 42
DISTINTO (270) 44
MAYOR (271) 34
MENOR (272) 36
MENOR_IGUAL (273) 40
MAYOR_IGUAL (274) 38
ID (275) 7 8 23 45 46 55 60
ASIG (276) 45 46
P_A (277) 24 26 58 59
P_C (278) 24 26 58 59
ESCRIBIR (279) 21 22
ESCANEAR (280) 23
DECVAR (281) 2
ENDDEC (282) 2
STRING (283) 9
CHAR (284) 10
INTEGER (285) 11
FLOAT (286) 12
IF (287) 24 26
ELSE (288) 26
WHILE (289) 59 60
START (290) 24 26 59
END (291) 24 26 59
IN (292) 60
DO (293) 60
ENDWHILE (294) 60
OP_MULT (295) 50
OP_DIV (296) 51
OP_SUMA (297) 47
OP_RESTA (298) 48
OP_MOD (299) 53


No terminales con las reglas donde aparecen

$accept (45)
    en la izquierda: 0
inicio_prima (46)
    en la izquierda: 1, en la derecha: 0
inicio (47)
    en la izquierda: 2 3, en la derecha: 1
bloque_declaraciones (48)
    en la izquierda: 4 5, en la derecha: 2 5
declaraciones (49)
    en la izquierda: 6, en la derecha: 4 5
lista_de_variables (50)
    en la izquierda: 7 8, en la derecha: 6 8
tipodato (51)
    en la izquierda: 9 10 11 12, en la derecha: 6
programa (52)
    en la izquierda: 13, en la derecha: 2 3
bloque (53)
    en la izquierda: 14 15, en la derecha: 13 15 24 26 59 60
sentencia (54)
    en la izquierda: 16 17 18 19 20, en la derecha: 14 15
funcion (55)
    en la izquierda: 21 22 23, en la derecha: 20
seleccion (56)
    en la izquierda: 24 26, en la derecha: 19
$@1 (57)
    en la izquierda: 25, en la derecha: 26
condicion_mul (58)
    en la izquierda: 28 30 31 32, en la derecha: 24 26 59
$@2 (59)
    en la izquierda: 27, en la derecha: 28
$@3 (60)
    en la izquierda: 29, en la derecha: 30
condicion (61)
    en la izquierda: 34 36 38 40 42 44, en la derecha: 28 30 31 32
$@4 (62)
    en la izquierda: 33, en la derecha: 34
$@5 (63)
    en la izquierda: 35, en la derecha: 36
$@6 (64)
    en la izquierda: 37, en la derecha: 38
$@7 (65)
    en la izquierda: 39, en la derecha: 40
$@8 (66)
    en la izquierda: 41, en la derecha: 42
$@9 (67)
    en la izquierda: 43, en la derecha: 44
asignacion (68)
    en la izquierda: 45 46, en la derecha: 18
expresion (69)
    en la izquierda: 47 48 49, en la derecha: 34 36 38 40 42 44 45
    47 48 58 61 62
termino (70)
    en la izquierda: 50 51 52, en la derecha: 47 48 49 50 51
factor (71)
    en la izquierda: 53 54, en la derecha: 50 51 52 53
factor_mod (72)
    en la izquierda: 55 56 57 58, en la derecha: 21 53 54
ciclo (73)
    en la izquierda: 59, en la derecha: 16
ciclo_especial (74)
    en la izquierda: 60, en la derecha: 17
lista_de_expresiones (75)
    en la izquierda: 61 62, en la derecha: 60 62


estado 0

    0 $accept: . inicio_prima $end

    ID        desplazar e ir al estado 1
    ESCRIBIR  desplazar e ir al estado 2
    ESCANEAR  desplazar e ir al estado 3
    DECVAR    desplazar e ir al estado 4
    IF        desplazar e ir al estado 5
    WHILE     desplazar e ir al estado 6

    inicio_prima    ir al estado 7
    inicio          ir al estado 8
    programa        ir al estado 9
    bloque          ir al estado 10
    sentencia       ir al estado 11
    funcion         ir al estado 12
    seleccion       ir al estado 13
    asignacion      ir al estado 14
    ciclo           ir al estado 15
    ciclo_especial  ir al estado 16


estado 1

   45 asignacion: ID . ASIG expresion P_COMA
   46           | ID . ASIG CTE_CADENA P_COMA

    ASIG  desplazar e ir al estado 17


estado 2

   21 funcion: ESCRIBIR . factor_mod P_COMA
   22        | ESCRIBIR . CTE_CADENA P_COMA

    CTE_INT     desplazar e ir al estado 18
    CTE_REAL    desplazar e ir al estado 19
    CTE_CADENA  desplazar e ir al estado 20
    ID          desplazar e ir al estado 21
    P_A         desplazar e ir al estado 22

    factor_mod  ir al estado 23


estado 3

   23 funcion: ESCANEAR . ID P_COMA

    ID  desplazar e ir al estado 24


estado 4

    2 inicio: DECVAR . bloque_declaraciones ENDDEC programa

    ID  desplazar e ir al estado 25

    bloque_declaraciones  ir al estado 26
    declaraciones         ir al estado 27
    lista_de_variables    ir al estado 28


estado 5

   24 seleccion: IF . P_A condicion_mul P_C START bloque END
   26          | IF . P_A condicion_mul P_C START bloque $@1 END ELSE START bloque END

    P_A  desplazar e ir al estado 29


estado 6

   59 ciclo: WHILE . P_A condicion_mul P_C START bloque END
   60 ciclo_especial: WHILE . ID IN C_A lista_de_expresiones C_C DO bloque ENDWHILE

    ID   desplazar e ir al estado 30
    P_A  desplazar e ir al estado 31


estado 7

    0 $accept: inicio_prima . $end

    $end  desplazar e ir al estado 32


estado 8

    1 inicio_prima: inicio .

    $default  reduce usando la regla 1 (inicio_prima)


estado 9

    3 inicio: programa .

    $default  reduce usando la regla 3 (inicio)


estado 10

   13 programa: bloque .
   15 bloque: bloque . sentencia

    ID        desplazar e ir al estado 1
    ESCRIBIR  desplazar e ir al estado 2
    ESCANEAR  desplazar e ir al estado 3
    IF        desplazar e ir al estado 5
    WHILE     desplazar e ir al estado 6

    $default  reduce usando la regla 13 (programa)

    sentencia       ir al estado 33
    funcion         ir al estado 12
    seleccion       ir al estado 13
    asignacion      ir al estado 14
    ciclo           ir al estado 15
    ciclo_especial  ir al estado 16


estado 11

   14 bloque: sentencia .

    $default  reduce usando la regla 14 (bloque)


estado 12

   20 sentencia: funcion .

    $default  reduce usando la regla 20 (sentencia)


estado 13

   19 sentencia: seleccion .

    $default  reduce usando la regla 19 (sentencia)


estado 14

   18 sentencia: asignacion .

    $default  reduce usando la regla 18 (sentencia)


estado 15

   16 sentencia: ciclo .

    $default  reduce usando la regla 16 (sentencia)


estado 16

   17 sentencia: ciclo_especial .

    $default  reduce usando la regla 17 (sentencia)


estado 17

   45 asignacion: ID ASIG . expresion P_COMA
   46           | ID ASIG . CTE_CADENA P_COMA

    CTE_INT     desplazar e ir al estado 18
    CTE_REAL    desplazar e ir al estado 19
    CTE_CADENA  desplazar e ir al estado 34
    ID          desplazar e ir al estado 21
    P_A         desplazar e ir al estado 22

    expresion   ir al estado 35
    termino     ir al estado 36
    factor      ir al estado 37
    factor_mod  ir al estado 38


estado 18

   56 factor_mod: CTE_INT .

    $default  reduce usando la regla 56 (factor_mod)


estado 19

   57 factor_mod: CTE_REAL .

    $default  reduce usando la regla 57 (factor_mod)


estado 20

   22 funcion: ESCRIBIR CTE_CADENA . P_COMA

    P_COMA  desplazar e ir al estado 39


estado 21

   55 factor_mod: ID .

    $default  reduce usando la regla 55 (factor_mod)


estado 22

   58 factor_mod: P_A . expresion P_C

    CTE_INT   desplazar e ir al estado 18
    CTE_REAL  desplazar e ir al estado 19
    ID        desplazar e ir al estado 21
    P_A       desplazar e ir al estado 22

    expresion   ir al estado 40
    termino     ir al estado 36
    factor      ir al estado 37
    factor_mod  ir al estado 38


estado 23

   21 funcion: ESCRIBIR factor_mod . P_COMA

    P_COMA  desplazar e ir al estado 41


estado 24

   23 funcion: ESCANEAR ID . P_COMA

    P_COMA  desplazar e ir al estado 42


estado 25

    7 lista_de_variables: ID .

    $default  reduce usando la regla 7 (lista_de_variables)


estado 26

    2 inicio: DECVAR bloque_declaraciones . ENDDEC programa
    5 bloque_declaraciones: bloque_declaraciones . declaraciones

    ID      desplazar e ir al estado 25
    ENDDEC  desplazar e ir al estado 43

    declaraciones       ir al estado 44
    lista_de_variables  ir al estado 28


estado 27

    4 bloque_declaraciones: declaraciones .

    $default  reduce usando la regla 4 (bloque_declaraciones)


estado 28

    6 declaraciones: lista_de_variables . DECLARACION tipodato P_COMA
    8 lista_de_variables: lista_de_variables . COMA ID

    DECLARACION  desplazar e ir al estado 45
    COMA         desplazar e ir al estado 46


estado 29

   24 seleccion: IF P_A . condicion_mul P_C START bloque END
   26          | IF P_A . condicion_mul P_C START bloque $@1 END ELSE START bloque END

    CTE_INT   desplazar e ir al estado 18
    CTE_REAL  desplazar e ir al estado 19
    NOT       desplazar e ir al estado 47
    ID        desplazar e ir al estado 21
    P_A       desplazar e ir al estado 22

    condicion_mul  ir al estado 48
    condicion      ir al estado 49
    expresion      ir al estado 50
    termino        ir al estado 36
    factor         ir al estado 37
    factor_mod     ir al estado 38


estado 30

   60 ciclo_especial: WHILE ID . IN C_A lista_de_expresiones C_C DO bloque ENDWHILE

    IN  desplazar e ir al estado 51


estado 31

   59 ciclo: WHILE P_A . condicion_mul P_C START bloque END

    CTE_INT   desplazar e ir al estado 18
    CTE_REAL  desplazar e ir al estado 19
    NOT       desplazar e ir al estado 47
    ID        desplazar e ir al estado 21
    P_A       desplazar e ir al estado 22

    condicion_mul  ir al estado 52
    condicion      ir al estado 49
    expresion      ir al estado 50
    termino        ir al estado 36
    factor         ir al estado 37
    factor_mod     ir al estado 38


estado 32

    0 $accept: inicio_prima $end .

    $default  aceptar


estado 33

   15 bloque: bloque sentencia .

    $default  reduce usando la regla 15 (bloque)


estado 34

   46 asignacion: ID ASIG CTE_CADENA . P_COMA

    P_COMA  desplazar e ir al estado 53


estado 35

   45 asignacion: ID ASIG expresion . P_COMA
   47 expresion: expresion . OP_SUMA termino
   48          | expresion . OP_RESTA termino

    P_COMA    desplazar e ir al estado 54
    OP_SUMA   desplazar e ir al estado 55
    OP_RESTA  desplazar e ir al estado 56


estado 36

   49 expresion: termino .
   50 termino: termino . OP_MULT factor
   51        | termino . OP_DIV factor

    OP_MULT  desplazar e ir al estado 57
    OP_DIV   desplazar e ir al estado 58

    $default  reduce usando la regla 49 (expresion)


estado 37

   52 termino: factor .
   53 factor: factor . OP_MOD factor_mod

    OP_MOD  desplazar e ir al estado 59

    $default  reduce usando la regla 52 (termino)


estado 38

   54 factor: factor_mod .

    $default  reduce usando la regla 54 (factor)


estado 39

   22 funcion: ESCRIBIR CTE_CADENA P_COMA .

    $default  reduce usando la regla 22 (funcion)


estado 40

   47 expresion: expresion . OP_SUMA termino
   48          | expresion . OP_RESTA termino
   58 factor_mod: P_A expresion . P_C

    P_C       desplazar e ir al estado 60
    OP_SUMA   desplazar e ir al estado 55
    OP_RESTA  desplazar e ir al estado 56


estado 41

   21 funcion: ESCRIBIR factor_mod P_COMA .

    $default  reduce usando la regla 21 (funcion)


estado 42

   23 funcion: ESCANEAR ID P_COMA .

    $default  reduce usando la regla 23 (funcion)


estado 43

    2 inicio: DECVAR bloque_declaraciones ENDDEC . programa

    ID        desplazar e ir al estado 1
    ESCRIBIR  desplazar e ir al estado 2
    ESCANEAR  desplazar e ir al estado 3
    IF        desplazar e ir al estado 5
    WHILE     desplazar e ir al estado 6

    programa        ir al estado 61
    bloque          ir al estado 10
    sentencia       ir al estado 11
    funcion         ir al estado 12
    seleccion       ir al estado 13
    asignacion      ir al estado 14
    ciclo           ir al estado 15
    ciclo_especial  ir al estado 16


estado 44

    5 bloque_declaraciones: bloque_declaraciones declaraciones .

    $default  reduce usando la regla 5 (bloque_declaraciones)


estado 45

    6 declaraciones: lista_de_variables DECLARACION . tipodato P_COMA

    STRING   desplazar e ir al estado 62
    CHAR     desplazar e ir al estado 63
    INTEGER  desplazar e ir al estado 64
    FLOAT    desplazar e ir al estado 65

    tipodato  ir al estado 66


estado 46

    8 lista_de_variables: lista_de_variables COMA . ID

    ID  desplazar e ir al estado 67


estado 47

   31 condicion_mul: NOT . condicion

    CTE_INT   desplazar e ir al estado 18
    CTE_REAL  desplazar e ir al estado 19
    ID        desplazar e ir al estado 21
    P_A       desplazar e ir al estado 22

    condicion   ir al estado 68
    expresion   ir al estado 50
    termino     ir al estado 36
    factor      ir al estado 37
    factor_mod  ir al estado 38


estado 48

   24 seleccion: IF P_A condicion_mul . P_C START bloque END
   26          | IF P_A condicion_mul . P_C START bloque $@1 END ELSE START bloque END

    P_C  desplazar e ir al estado 69


estado 49

   28 condicion_mul: condicion . $@2 AND condicion
   30              | condicion . $@3 OR condicion
   32              | condicion .

    OR        reduce usando la regla 29 ($@3)
    P_C       reduce usando la regla 32 (condicion_mul)
    $default  reduce usando la regla 27 ($@2)

    $@2  ir al estado 70
    $@3  ir al estado 71


estado 50

   34 condicion: expresion . $@4 MAYOR expresion
   36          | expresion . $@5 MENOR expresion
   38          | expresion . $@6 MAYOR_IGUAL expresion
   40          | expresion . $@7 MENOR_IGUAL expresion
   42          | expresion . $@8 IGUAL expresion
   44          | expresion . $@9 DISTINTO expresion
   47 expresion: expresion . OP_SUMA termino
   48          | expresion . OP_RESTA termino

    OP_SUMA   desplazar e ir al estado 55
    OP_RESTA  desplazar e ir al estado 56

    IGUAL        reduce usando la regla 41 ($@8)
    DISTINTO     reduce usando la regla 43 ($@9)
    MENOR        reduce usando la regla 35 ($@5)
    MENOR_IGUAL  reduce usando la regla 39 ($@7)
    MAYOR_IGUAL  reduce usando la regla 37 ($@6)
    $default     reduce usando la regla 33 ($@4)

    $@4  ir al estado 72
    $@5  ir al estado 73
    $@6  ir al estado 74
    $@7  ir al estado 75
    $@8  ir al estado 76
    $@9  ir al estado 77


estado 51

   60 ciclo_especial: WHILE ID IN . C_A lista_de_expresiones C_C DO bloque ENDWHILE

    C_A  desplazar e ir al estado 78


estado 52

   59 ciclo: WHILE P_A condicion_mul . P_C START bloque END

    P_C  desplazar e ir al estado 79


estado 53

   46 asignacion: ID ASIG CTE_CADENA P_COMA .

    $default  reduce usando la regla 46 (asignacion)


estado 54

   45 asignacion: ID ASIG expresion P_COMA .

    $default  reduce usando la regla 45 (asignacion)


estado 55

   47 expresion: expresion OP_SUMA . termino

    CTE_INT   desplazar e ir al estado 18
    CTE_REAL  desplazar e ir al estado 19
    ID        desplazar e ir al estado 21
    P_A       desplazar e ir al estado 22

    termino     ir al estado 80
    factor      ir al estado 37
    factor_mod  ir al estado 38


estado 56

   48 expresion: expresion OP_RESTA . termino

    CTE_INT   desplazar e ir al estado 18
    CTE_REAL  desplazar e ir al estado 19
    ID        desplazar e ir al estado 21
    P_A       desplazar e ir al estado 22

    termino     ir al estado 81
    factor      ir al estado 37
    factor_mod  ir al estado 38


estado 57

   50 termino: termino OP_MULT . factor

    CTE_INT   desplazar e ir al estado 18
    CTE_REAL  desplazar e ir al estado 19
    ID        desplazar e ir al estado 21
    P_A       desplazar e ir al estado 22

    factor      ir al estado 82
    factor_mod  ir al estado 38


estado 58

   51 termino: termino OP_DIV . factor

    CTE_INT   desplazar e ir al estado 18
    CTE_REAL  desplazar e ir al estado 19
    ID        desplazar e ir al estado 21
    P_A       desplazar e ir al estado 22

    factor      ir al estado 83
    factor_mod  ir al estado 38


estado 59

   53 factor: factor OP_MOD . factor_mod

    CTE_INT   desplazar e ir al estado 18
    CTE_REAL  desplazar e ir al estado 19
    ID        desplazar e ir al estado 21
    P_A       desplazar e ir al estado 22

    factor_mod  ir al estado 84


estado 60

   58 factor_mod: P_A expresion P_C .

    $default  reduce usando la regla 58 (factor_mod)


estado 61

    2 inicio: DECVAR bloque_declaraciones ENDDEC programa .

    $default  reduce usando la regla 2 (inicio)


estado 62

    9 tipodato: STRING .

    $default  reduce usando la regla 9 (tipodato)


estado 63

   10 tipodato: CHAR .

    $default  reduce usando la regla 10 (tipodato)


estado 64

   11 tipodato: INTEGER .

    $default  reduce usando la regla 11 (tipodato)


estado 65

   12 tipodato: FLOAT .

    $default  reduce usando la regla 12 (tipodato)


estado 66

    6 declaraciones: lista_de_variables DECLARACION tipodato . P_COMA

    P_COMA  desplazar e ir al estado 85


estado 67

    8 lista_de_variables: lista_de_variables COMA ID .

    $default  reduce usando la regla 8 (lista_de_variables)


estado 68

   31 condicion_mul: NOT condicion .

    $default  reduce usando la regla 31 (condicion_mul)


estado 69

   24 seleccion: IF P_A condicion_mul P_C . START bloque END
   26          | IF P_A condicion_mul P_C . START bloque $@1 END ELSE START bloque END

    START  desplazar e ir al estado 86


estado 70

   28 condicion_mul: condicion $@2 . AND condicion

    AND  desplazar e ir al estado 87


estado 71

   30 condicion_mul: condicion $@3 . OR condicion

    OR  desplazar e ir al estado 88


estado 72

   34 condicion: expresion $@4 . MAYOR expresion

    MAYOR  desplazar e ir al estado 89


estado 73

   36 condicion: expresion $@5 . MENOR expresion

    MENOR  desplazar e ir al estado 90


estado 74

   38 condicion: expresion $@6 . MAYOR_IGUAL expresion

    MAYOR_IGUAL  desplazar e ir al estado 91


estado 75

   40 condicion: expresion $@7 . MENOR_IGUAL expresion

    MENOR_IGUAL  desplazar e ir al estado 92


estado 76

   42 condicion: expresion $@8 . IGUAL expresion

    IGUAL  desplazar e ir al estado 93


estado 77

   44 condicion: expresion $@9 . DISTINTO expresion

    DISTINTO  desplazar e ir al estado 94


estado 78

   60 ciclo_especial: WHILE ID IN C_A . lista_de_expresiones C_C DO bloque ENDWHILE

    CTE_INT   desplazar e ir al estado 18
    CTE_REAL  desplazar e ir al estado 19
    ID        desplazar e ir al estado 21
    P_A       desplazar e ir al estado 22

    expresion             ir al estado 95
    termino               ir al estado 36
    factor                ir al estado 37
    factor_mod            ir al estado 38
    lista_de_expresiones  ir al estado 96


estado 79

   59 ciclo: WHILE P_A condicion_mul P_C . START bloque END

    START  desplazar e ir al estado 97


estado 80

   47 expresion: expresion OP_SUMA termino .
   50 termino: termino . OP_MULT factor
   51        | termino . OP_DIV factor

    OP_MULT  desplazar e ir al estado 57
    OP_DIV   desplazar e ir al estado 58

    $default  reduce usando la regla 47 (expresion)


estado 81

   48 expresion: expresion OP_RESTA termino .
   50 termino: termino . OP_MULT factor
   51        | termino . OP_DIV factor

    OP_MULT  desplazar e ir al estado 57
    OP_DIV   desplazar e ir al estado 58

    $default  reduce usando la regla 48 (expresion)


estado 82

   50 termino: termino OP_MULT factor .
   53 factor: factor . OP_MOD factor_mod

    OP_MOD  desplazar e ir al estado 59

    $default  reduce usando la regla 50 (termino)


estado 83

   51 termino: termino OP_DIV factor .
   53 factor: factor . OP_MOD factor_mod

    OP_MOD  desplazar e ir al estado 59

    $default  reduce usando la regla 51 (termino)


estado 84

   53 factor: factor OP_MOD factor_mod .

    $default  reduce usando la regla 53 (factor)


estado 85

    6 declaraciones: lista_de_variables DECLARACION tipodato P_COMA .

    $default  reduce usando la regla 6 (declaraciones)


estado 86

   24 seleccion: IF P_A condicion_mul P_C START . bloque END
   26          | IF P_A condicion_mul P_C START . bloque $@1 END ELSE START bloque END

    ID        desplazar e ir al estado 1
    ESCRIBIR  desplazar e ir al estado 2
    ESCANEAR  desplazar e ir al estado 3
    IF        desplazar e ir al estado 5
    WHILE     desplazar e ir al estado 6

    bloque          ir al estado 98
    sentencia       ir al estado 11
    funcion         ir al estado 12
    seleccion       ir al estado 13
    asignacion      ir al estado 14
    ciclo           ir al estado 15
    ciclo_especial  ir al estado 16


estado 87

   28 condicion_mul: condicion $@2 AND . condicion

    CTE_INT   desplazar e ir al estado 18
    CTE_REAL  desplazar e ir al estado 19
    ID        desplazar e ir al estado 21
    P_A       desplazar e ir al estado 22

    condicion   ir al estado 99
    expresion   ir al estado 50
    termino     ir al estado 36
    factor      ir al estado 37
    factor_mod  ir al estado 38


estado 88

   30 condicion_mul: condicion $@3 OR . condicion

    CTE_INT   desplazar e ir al estado 18
    CTE_REAL  desplazar e ir al estado 19
    ID        desplazar e ir al estado 21
    P_A       desplazar e ir al estado 22

    condicion   ir al estado 100
    expresion   ir al estado 50
    termino     ir al estado 36
    factor      ir al estado 37
    factor_mod  ir al estado 38


estado 89

   34 condicion: expresion $@4 MAYOR . expresion

    CTE_INT   desplazar e ir al estado 18
    CTE_REAL  desplazar e ir al estado 19
    ID        desplazar e ir al estado 21
    P_A       desplazar e ir al estado 22

    expresion   ir al estado 101
    termino     ir al estado 36
    factor      ir al estado 37
    factor_mod  ir al estado 38


estado 90

   36 condicion: expresion $@5 MENOR . expresion

    CTE_INT   desplazar e ir al estado 18
    CTE_REAL  desplazar e ir al estado 19
    ID        desplazar e ir al estado 21
    P_A       desplazar e ir al estado 22

    expresion   ir al estado 102
    termino     ir al estado 36
    factor      ir al estado 37
    factor_mod  ir al estado 38


estado 91

   38 condicion: expresion $@6 MAYOR_IGUAL . expresion

    CTE_INT   desplazar e ir al estado 18
    CTE_REAL  desplazar e ir al estado 19
    ID        desplazar e ir al estado 21
    P_A       desplazar e ir al estado 22

    expresion   ir al estado 103
    termino     ir al estado 36
    factor      ir al estado 37
    factor_mod  ir al estado 38


estado 92

   40 condicion: expresion $@7 MENOR_IGUAL . expresion

    CTE_INT   desplazar e ir al estado 18
    CTE_REAL  desplazar e ir al estado 19
    ID        desplazar e ir al estado 21
    P_A       desplazar e ir al estado 22

    expresion   ir al estado 104
    termino     ir al estado 36
    factor      ir al estado 37
    factor_mod  ir al estado 38


estado 93

   42 condicion: expresion $@8 IGUAL . expresion

    CTE_INT   desplazar e ir al estado 18
    CTE_REAL  desplazar e ir al estado 19
    ID        desplazar e ir al estado 21
    P_A       desplazar e ir al estado 22

    expresion   ir al estado 105
    termino     ir al estado 36
    factor      ir al estado 37
    factor_mod  ir al estado 38


estado 94

   44 condicion: expresion $@9 DISTINTO . expresion

    CTE_INT   desplazar e ir al estado 18
    CTE_REAL  desplazar e ir al estado 19
    ID        desplazar e ir al estado 21
    P_A       desplazar e ir al estado 22

    expresion   ir al estado 106
    termino     ir al estado 36
    factor      ir al estado 37
    factor_mod  ir al estado 38


estado 95

   47 expresion: expresion . OP_SUMA termino
   48          | expresion . OP_RESTA termino
   61 lista_de_expresiones: expresion .
